[DALTest] GetRobotMoves fixes done. SQL queries corrected

--- a/DALTest/src/com/lge/spartan/daltest/DALTestForm.form
+++ b/DALTest/src/com/lge/spartan/daltest/DALTestForm.form
@@ -624,8 +624,9 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                          <Component id="jbtnGetRobotState" max="32767" attributes="0"/>
+                          <Component id="jButton1" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                              <Component id="jbtnGetRobotState" max="32767" attributes="0"/>
                               <Component id="jbtnGetRobots" max="32767" attributes="0"/>
                               <Component id="jbtnAddRobotStatus" alignment="0" max="32767" attributes="0"/>
                               <Component id="jbtnUpdateRobotStatus" alignment="0" max="32767" attributes="0"/>
@@ -713,7 +714,9 @@
                       <Component id="jbtnGetRobots" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jbtnGetRobotState" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="89" max="32767" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="55" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -839,6 +842,14 @@
             <Component class="javax.swing.JButton" name="jbtnGetRobotState">
               <Properties>
                 <Property name="text" type="java.lang.String" value="GetRobotState"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnGetRobotStateActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="jButton1">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="jButton1"/>
               </Properties>
             </Component>
           </SubComponents>
