--- a/DALTest/src/com/lge/spartan/daltest/DALTestForm.form
+++ b/DALTest/src/com/lge/spartan/daltest/DALTestForm.form
@@ -872,8 +872,10 @@
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="jbtnGetWarehouses" max="32767" attributes="0"/>
                           <Component id="jbtnGetStations" max="32767" attributes="0"/>
+                          <Component id="jbtnSetWHServerHeartbeatTS" max="32767" attributes="0"/>
+                          <Component id="jbtnIsWHServerAvailable" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="601" max="32767" attributes="0"/>
+                      <EmptySpace pref="565" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -884,7 +886,11 @@
                       <Component id="jbtnGetStations" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jbtnGetWarehouses" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="198" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                      <Component id="jbtnSetWHServerHeartbeatTS" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="jbtnIsWHServerAvailable" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="114" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -904,6 +910,22 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnGetWarehousesActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="jbtnSetWHServerHeartbeatTS">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="SetWHServerTimestamp"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnSetWHServerHeartbeatTSActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="jbtnIsWHServerAvailable">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Is WH Server Available?"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnIsWHServerAvailableActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
