--- a/SupervisorApp/src/com/lge/spartan/supervisor/view/SupervisorMainView.form
+++ b/SupervisorApp/src/com/lge/spartan/supervisor/view/SupervisorMainView.form
@@ -257,13 +257,12 @@
                       <Font name="&#xad74;&#xb9bc;" size="12" style="0"/>
                     </Property>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="9" rowCount="0">
-                        <Column editable="false" title="Warehouse Id" type="java.lang.Integer"/>
+                      <Table columnCount="8" rowCount="0">
+                        <Column editable="false" title="Warehouse\nId" type="java.lang.Integer"/>
                         <Column editable="false" title="Robot Id" type="java.lang.Integer"/>
                         <Column editable="false" title="Robot Status" type="java.lang.Object"/>
                         <Column editable="false" title="Order No." type="java.lang.Integer"/>
-                        <Column editable="false" title="Widget Name" type="java.lang.String"/>
-                        <Column editable="false" title="Quantity" type="java.lang.Object"/>
+                        <Column editable="false" title="Widget\nInfo" type="java.lang.String"/>
                         <Column editable="false" title="Stn visited" type="java.lang.String"/>
                         <Column editable="false" title="Cur Stn" type="java.lang.Integer"/>
                         <Column editable="false" title="Next Stn" type="java.lang.Integer"/>
@@ -271,11 +270,6 @@
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                           <Title/>
                           <Editor/>
