--- a/SupervisorApp/src/com/lge/spartan/supervisor/view/AddWidgetView.form
+++ b/SupervisorApp/src/com/lge/spartan/supervisor/view/AddWidgetView.form
@@ -38,9 +38,9 @@
                           <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel5" alignment="0" min="-2" pref="138" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="49" max="32767" attributes="0"/>
+                      <EmptySpace pref="40" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="desc" min="-2" pref="156" max="-2" attributes="0"/>
                           <Component id="name" min="-2" pref="156" max="-2" attributes="0"/>
@@ -140,7 +140,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Warehouse System"/>
+        <Property name="text" type="java.lang.String" value="Warehouse ID"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="warehouseId">
